# network-magician

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  model.rs  output.rs  scanner.rs  target.rs  util.rs  wifi.rs
tests/: model_tests.rs  target_tests.rs  util_tests.rs  wifi_tests.rs
